update map popup gallery

--- a/app/_templates/header.twig
+++ b/app/_templates/header.twig
@@ -44,7 +44,7 @@
         </div>
       </li>
       <li class="login--member">
-        <div class="btn-group">
+        <div class="btn-group dropdown">
           <a class="dropdown-toggle menu-item" data-toggle="dropdown">
             <div class="header-avatar avatar" data-div="user-avatar" style="background-image: url('https://graph.facebook.com/1689272867796788/picture')"></div>
             <span class="welcome">Welcome,</span>
