--- a/app/assets/css/pages/_home.scss
+++ b/app/assets/css/pages/_home.scss
@@ -200,6 +200,7 @@
 	color: #fff;
 	line-height: 0;
 	cursor: pointer;
+	z-index: 2;
 	@include absolute(top 10px right 10px)
 	@include screen(medium){
 		font-size: 28px;
