--- a/app/assets/css/pages/_global.scss
+++ b/app/assets/css/pages/_global.scss
@@ -13,6 +13,10 @@ body {
 	}
 }
 
+.hidden {
+	display: none;
+}
+
 .container {
 	padding-bottom: 1px;
 	overflow: hidden;
@@ -33,6 +37,10 @@ ul, ol {
 	margin: 0;
 	padding: 0; 
 	list-style: none;
+}
+
+h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
+	line-height: 1.4;
 }
 
 * {
