--- a/app/assets/css/pages/_search.scss
+++ b/app/assets/css/pages/_search.scss
@@ -15,6 +15,7 @@
   .select-wrapper, .checkbox-list {
     display: inline-block;
     margin-bottom: 0;
+    z-index: 11;
   }
   .btn-submit {
     top: 3px;
@@ -27,6 +28,7 @@
   width: 60%;
   float: right;
   display: none;
+  position: relative;
   @include screen(medium){
     max-height: calc(100vh - 172px);
     overflow: hidden;
@@ -459,17 +461,12 @@
 }
 
 .map-control {
-  background-color: #fff;
-  border: 1px solid #ccc;
-  box-shadow: 0 2px 2px rgba(33, 33, 33, 0.4);
   font-family: 'Roboto','sans-serif';
   margin: 10px;
   padding: 10px;
   li {
-    margin-bottom: 0;
-    & + li{
-      margin-top: 5px;
-    }
+    display: inline-block;
+    margin: 0 5px;
   }
 }
 
