update bug listing

--- a/app/_templates/header.twig
+++ b/app/_templates/header.twig
@@ -45,7 +45,7 @@
       </li>
       <li class="login--member">
         <div class="btn-group dropdown">
-          <a class="dropdown-toggle menu-item" data-toggle="dropdown">
+          <a class="dropdown-toggle menu-item dropdown--menu">
             <div class="header-avatar avatar" data-div="user-avatar" style="background-image: url('https://graph.facebook.com/1689272867796788/picture')"></div>
             <span class="welcome">Welcome,</span>
             Thanh Nguyen 
