--- a/app/assets/css/pages/_global.scss
+++ b/app/assets/css/pages/_global.scss
@@ -321,6 +321,7 @@ hr {
 	border-radius: 3px;
 	text-align: center;
 	margin-right: 5px;
+	white-space: nowrap;
 }
 
 .link-share {
@@ -551,12 +552,16 @@ section {
 .slick-arrow {
 	font-size: 0;
 	@include absolute(top right);
-	width: 40px;
+	width: 30px;
 	height: 100%;
 	background: none;
 	z-index: 1;
 	border: none;
 	outline: none;
+	@include screen(medium){
+		width: 40px;
+	}
+
 	
 	&:after {
 		content: "\f105";
