--- a/app/listing.twig
+++ b/app/listing.twig
@@ -6,7 +6,7 @@
   <div class="bar-request">
     <div class="container">
       <a href="#" class="btn show-for-medium"><i class="fa fa-phone" aria-hidden="true"></i>Direct Call</a>
-      <a href="#inspectionForm" data-toggle="modal" class="btn btn--red pull-right">Request Inspectation</a>
+      <a href="#" data-popup="#inspectionForm" class="btn btn--red pull-right">Request Inspectation</a>
       <h3 class="hide-for-medium">
         RESORT - LIKE NEW APARTMENT IN STARHILL DISTRICT 7
         <span class="price"><b>$1,200</b> per month</span>
@@ -16,39 +16,40 @@
   </div>
 
   <div class="container">
-    <div class="modal fade" id="galleryDetail">
+
+    <div id="galleryDetail" class="mfp-hide">
       <div class="modal-dialog">
         <div class="modal-content">
-          <a href="#galleryDetail" data-toggle="modal" class="close-modal"><i class="fa fa-close"></i></a>
-          <div class="modal-body row">
-            <div class="col-md-8 gallery__slide" data-module="PopupGalleryHouse">
-              <ul class="slider gallery__for"></ul>
-              <p class="text-left">Photo <span class="counter-slide">3/9</span>: <span class="room-name">Bath room</span><br /> Real photo taken by Hoozing</p>
-              <ul class="slider gallery__nav"></ul>
-            </div>
-            <div class="col-md-4 gallery__info hide-for-small">
-              <h3>house name</h3>
-              <p><b class="apartment-price">$1,200</b> per month</p>
-              <ul class="thumb-service thumb--2">
-                <li><i class="fa fa-map-marker"></i> District 7</li>
-                <li><i class="fa fa-bed"></i> 1 bed </li>
-                <li><i class="fa fa-bath"></i> 1 bath</li>         
-              </ul>
-              <div class="btn-wrapper">
-                <a href="#" class="btn btn--red btn--full">Request Inspection</a>
-                <a href="#" class="btn btn--full"><i class="fa fa-phone"></i><span>(+84) 899 909 790</span></a>
+            <div class="modal-body row">
+              <a href="javascript:void(0);" class="mfp-close"><i class="fa fa-close"></i></a>
+              <div class="col-md-8 gallery__slide" data-module="PopupGalleryHouse">
+                <ul class="slider gallery__for"></ul>
+                <p class="text-left">Photo <span class="counter-slide">3/9</span>: <span class="room-name">Bath room</span><br /> Real photo taken by Hoozing</p>
+                <ul class="slider gallery__nav"></ul>
+              </div>
+              <div class="col-md-4 gallery__info hide-for-small">
+                <h3>house name</h3>
+                <p><b class="apartment-price">$1,200</b> per month</p>
+                <ul class="thumb-service thumb--2">
+                  <li><i class="fa fa-map-marker"></i> District 7</li>
+                  <li><i class="fa fa-bed"></i> 1 bed </li>
+                  <li><i class="fa fa-bath"></i> 1 bath</li>         
+                </ul>
+                <div class="btn-wrapper">
+                  <a href="#" class="btn btn--red btn--full">Request Inspection</a>
+                  <a href="#" class="btn btn--full"><i class="fa fa-phone"></i><span>(+84) 899 909 790</span></a>
+                </div>
               </div>
             </div>
-          </div>
         </div>
       </div>
     </div>
 
-    <div class="modal fade modal-inspectation" id="inspectionForm">
+    <div class="modal-inspectation mfp-hide" id="inspectionForm">
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-body">
-            <a href="#inspectionForm" data-toggle="modal" class="close-modal"><i class="fa fa-close"></i></a>
+              <a href="javascript:void(0);" class="mfp-close"><i class="fa fa-close"></i></a>
             <div class="block-title">
               <h2> Resort - like new Apartment in Starhill district 7</h2>
               <div class="house-code">
@@ -98,7 +99,7 @@
   <section class="banner">
     <img src="assets/images/dummy/featured-image-listing.png" />
     <div class="banner__button">
-      <a href="#galleryDetail" data-toggle="modal" class="btn btn__photo">View Photo</a>
+      <a href="#" class="btn btn__photo show-gallery">View Photo</a>
       <a href="javascript:void(0)" class="btn bg--red">View 360</a>
     </div>
   </section>
@@ -145,15 +146,15 @@
             </ul>
 
             <ul class="gallery-house row hide-for-small">
-              <li class="col-xs-2" data-room="Bath room"><a href="#galleryDetail" data-toggle="modal"><img src="assets/images/slideimg/img1.jpg" alt=""></a></li>
-              <li class="col-xs-2" data-room="Living room"><a href="#galleryDetail" data-toggle="modal"><img src="assets/images/slideimg/img2.jpg" alt=""></a></li>
-              <li class="col-xs-2" data-room="Bed room"><a href="#galleryDetail" data-toggle="modal"><img src="assets/images/slideimg/img3.jpg" alt=""></a></li>
-              <li class="col-xs-2" data-room="Bath room"><a href="#galleryDetail" data-toggle="modal"><img src="assets/images/slideimg/img4.jpg" alt=""></a></li>
-              <li class="col-xs-2" data-room="Toilet"><a href="#galleryDetail" data-toggle="modal"><img src="assets/images/slideimg/img1.jpg" alt=""></a></li>
-              <li class="col-xs-2" data-room="Bath room"><a href="#galleryDetail" data-toggle="modal"><img src="assets/images/slideimg/img2.jpg" alt=""></a></li>
-              <li class="col-xs-2" data-room="Bath room"><a href="#galleryDetail" data-toggle="modal"><img src="assets/images/slideimg/img3.jpg" alt=""></a></li>
-              <li class="col-xs-2" data-room="Bath room"><a href="#galleryDetail" data-toggle="modal"><img src="assets/images/slideimg/img4.jpg" alt=""></a></li>
-              <li class="col-xs-2" data-room="Bath room"><a href="#galleryDetail" data-toggle="modal"><img src="assets/images/slideimg/img5.jpg" alt=""></a></li>
+              <li class="col-xs-2" data-room="Bath room"><a href="#" class="show-gallery"><img src="assets/images/slideimg/img1.jpg" alt=""></a></li>
+              <li class="col-xs-2" data-room="Living room"><a href="#" class="show-gallery"><img src="assets/images/slideimg/img2.jpg" alt=""></a></li>
+              <li class="col-xs-2" data-room="Bed room"><a href="#" class="show-gallery"><img src="assets/images/slideimg/img3.jpg" alt=""></a></li>
+              <li class="col-xs-2" data-room="Bath room"><a href="#" class="show-gallery"><img src="assets/images/slideimg/img4.jpg" alt=""></a></li>
+              <li class="col-xs-2" data-room="Toilet"><a href="#" class="show-gallery"><img src="assets/images/slideimg/img1.jpg" alt=""></a></li>
+              <li class="col-xs-2" data-room="Bath room"><a href="#" class="show-gallery"><img src="assets/images/slideimg/img2.jpg" alt=""></a></li>
+              <li class="col-xs-2" data-room="Bath room"><a href="#" class="show-gallery"><img src="assets/images/slideimg/img3.jpg" alt=""></a></li>
+              <li class="col-xs-2" data-room="Bath room"><a href="#" class="show-gallery"><img src="assets/images/slideimg/img4.jpg" alt=""></a></li>
+              <li class="col-xs-2" data-room="Bath room"><a href="#" class="show-gallery"><img src="assets/images/slideimg/img5.jpg" alt=""></a></li>
             </ul>
 
             <h3 class="block-title" id="desciption">Description</h3>
@@ -240,7 +241,7 @@
               <div class="input-wrapper">
                 <input type="email" name="" placeholder="Your email" />
               </div>
-              <a href="#inspectionForm" data-toggle="modal" class="btn btn--red btn--full">Request Inspectation</a>
+              <a href="#" data-popup="#inspectionForm" class="btn btn--red btn--full">Request Inspectation</a>
               <a href="#" class="link-share"><i class="fa fa-heart-o"></i> Favorite</a>
               <a href="#" class="link-share"><i class="fa fa-envelope-o"></i> Share</a>
             </form>
