--- a/app/assets/css/pages/_global.scss
+++ b/app/assets/css/pages/_global.scss
@@ -316,6 +316,11 @@ hr {
 	background: $gray-dark !important;
 }
 
+.bg--orange {
+	color: #fff !important;
+	background: orange !important;
+}
+
 .tag {
 	padding: 3px 5px;
 	border-radius: 3px;
