equal and price issue

--- a/app/index.twig
+++ b/app/index.twig
@@ -246,7 +246,7 @@
 			<div class="container">
 
 				<h2 class="section-title text-center">Featured Projects</h2>
-				<div class="slide-project" data-module="SlideProject">
+				<div class="slide-project" data-module="SlideProject Equalize" data-target=".item-project">
 					<div class="slider-wrapper">
 						{% for i in 1..4 %}
 							<div class="item-project">
